2002-12-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.{cc,h}: Use Gtk::RC::parse_string() and the
	appropriate RC style settings to reduce the height of the Stop
	button, instead of the insane set_size_request() hack.  This way
	the label text gets properly aligned now.

2002-12-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (scale_to_8bit): Don't try to round to the
	nearest value.  This fixes a fun bug that caused the orange color
	of the current match to become slightly brighter on each config
	load/save cycle.

2002-12-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am (stockimages.h): Beautify by printing the
	actual command line that is executed, rather than the shell code
	to build it.  This is also what autoconf does in its rules.

2002-12-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.desktop: Add Comment[de] translation, and remove GNOME
	from Categories.  Recent GNOME applications don't seem to specify
	this category anymore.

2002-12-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (escape_non_ascii): New function to work around
	a crash in libpcre when using literal UTF-8 in character classes.
	This still won't make it work, but prevents the crash and forces
	an error message if characters in classes are outside the Latin1
	range.

2002-12-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Check for gtkmm >= 2.1.1 instead of the compile
	test based on Glib::set_application_name().  (Don't worry, gtkmm
	2.1.x is not yet a requirement.)

2002-12-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.cc: Don't #include GTK+ headers if gtkmm 2.2
	API is available.

	(ColorLabel::on_expose_event): When building with gtkmm 2.2, use
	Gtk::Widget::get_style_property() instead of the ugly varargs
	function gtk_widget_style_get().

2002-12-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.cc (ColorSelectionButton::on_clicked): Convert